syntax = "proto3";

package router;

option php_namespace = "Phluxor\\Router\\ProtoBuf";
option php_metadata_namespace = "Phluxor\\Router\\Metadata\\ProtoBuf";

import "actor.proto";

message AddRoutee {
  actor.PID PID = 1;
}

message RemoveRoutee {
  actor.PID PID = 1;
}

message AdjustPoolSize {
  int32 change = 1;
}

message GetRoutees {}

message Routees {
  repeated actor.PID PIDs = 1;
}
